--- a/debian/rules
+++ b/debian/rules
@@ -10,3 +10,7 @@ override_dh_auto_configure:
 override_dh_auto_install:
 	$(overridden_command) --destdir=debian/tmp
 
+generate-icons:
+	while read src dest; do \
+		convert debian/tmp/$$src debian/icons/$$dest; \
+	done <debian/icon-list
