--- a/debian/control
+++ b/debian/control
@@ -18,8 +18,8 @@ Build-Depends: cmake,
                pkg-kde-tools (>= 0.14)
 Standards-Version: 3.9.5
 Homepage: http://games.kde.org/
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-sc/bovo.git
-Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-sc/bovo.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-applications/bovo.git
+Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-applications/bovo.git
 
 Package: bovo
 Architecture: any
