--- a/debian/control
+++ b/debian/control
@@ -10,12 +10,21 @@ Uploaders: Daniel Schepler <schepler@debian.org>,
            Eshat Cakar <info@eshat.de>,
            Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>,
            Maximiliano Curia <maxy@debian.org>
-Build-Depends: cmake,
+Build-Depends: cmake (>= 2.8.12~),
                debhelper (>= 9),
+               extra-cmake-modules (>= 1.3.0~),
                kde-sc-dev-latest (>= 4:4.11),
                kdelibs5-dev,
                libkdegames-dev (>= 4:14.12.2),
-               pkg-kde-tools (>= 0.14)
+               libkf5coreaddons-dev,
+               libkf5declarative-dev,
+               libkf5kdegames-dev (>= 4.9.0~),
+               libkf5newstuff-dev,
+               libkf5xmlgui-dev,
+               libqt5svg5-dev (>= 5.2.0~),
+               pkg-kde-tools (>= 0.14),
+               qtbase5-dev (>= 5.2.0~),
+               qtdeclarative5-dev (>= 5.2.0~)
 Standards-Version: 3.9.6
 Homepage: http://games.kde.org/
 Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/applications/bovo.git
