Add kdelibs4support build dep.

--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Build-Depends: cmake (>= 2.8.12~),
                libkf5dbusaddons-dev,
                libkf5declarative-dev,
                libkf5kdegames-dev (>= 4.9.0~),
+               libkf5kdelibs4support-dev,
                libkf5newstuff-dev,
                libkf5xmlgui-dev,
                libqt5svg5-dev (>= 5.4),
