--- a/debian/control
+++ b/debian/control
@@ -27,8 +27,8 @@ Build-Depends: cmake (>= 2.8.12~),
                qtdeclarative5-dev (>= 5.4)
 Standards-Version: 3.9.6
 Homepage: http://games.kde.org/
-Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/applications/bovo.git
-Vcs-Git: git://anonscm.debian.org/pkg-kde/applications/bovo.git
+Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/applications/bovo.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-kde/applications/bovo.git
 
 Package: bovo
 Architecture: any
